--- a/mozer/hw7/app/src/main/res/layout/fragment_auth.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_auth.xml
@@ -27,14 +27,13 @@
         android:hint="@string/username"
         android:textColorHint="?attr/colorPrimary"
         android:textSize="16sp"
-        app:endIconDrawable="@drawable/ic_cancel"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ti_login"
+            android:id="@+id/tiLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -52,14 +51,13 @@
         android:hint="@string/password"
         android:textColorHint="?attr/colorPrimary"
         android:textSize="16sp"
-        app:endIconDrawable="@drawable/ic_cancel"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ti_password"
+            android:id="@+id/tiPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -69,7 +67,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_continue"
+        android:id="@+id/btnContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
