--- a/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
@@ -18,10 +18,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/feed_list"
+        android:id="@+id/feedList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/navigation_view_height"
         android:clipToPadding="false"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp"
@@ -30,9 +29,11 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:icon="@drawable/ic_add" />
+        app:icon="@drawable/ic_add"
+        app:iconSize="14dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
