--- a/mozer/hw7/app/src/main/res/layout/item_images_list.xml
+++ b/mozer/hw7/app/src/main/res/layout/item_images_list.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:theme="@style/Theme.Hw7.CornerRadius"
-        android:id="@+id/picture"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        android:layout_marginEnd="8dp"
-        tools:src="@color/black" />
-</FrameLayout>
+<com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/image"
+    android:layout_margin="1dp"
+    android:layout_width="match_parent"
+    android:layout_height="124dp"
+    android:scaleType="centerCrop"
+    tools:src="@color/black" />
