--- a/mozer/hw7/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/mozer/hw7/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:icon="@drawable/ic_view_stream"
+    <item
         android:id="@+id/feedFragment"
+        android:icon="@drawable/ic_feed"
         android:title="@string/feed"
-        app:showAsAction="ifRoom"/>
-    <item android:icon="@drawable/ic_profile"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_profile"
         android:title="@string/profile"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 </menu>
