--- a/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
+++ b/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
@@ -15,9 +15,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:menu="@menu/list_notes_menu"
             app:title="QuickNote"
-            app:titleCentered="true"
-            app:menu="@menu/list_notes_menu" />
+            app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
