--- a/mozer/hw6/app/src/main/res/layout/fragment_search_notes.xml
+++ b/mozer/hw6/app/src/main/res/layout/fragment_search_notes.xml
@@ -18,13 +18,12 @@
             app:titleCentered="true" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input"
+            android:id="@+id/searchLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_margin="16dp"
+            app:hintEnabled="false"
             app:boxBackgroundColor="@color/surface_variant_dark"
-            app:boxCornerRadiusBottomStart="4dp"
-            app:boxCornerRadiusTopEnd="4dp"
             app:boxStrokeWidth="0dp"
             app:endIconDrawable="@drawable/ic_cross_circle"
             app:endIconMode="clear_text"
@@ -32,22 +31,20 @@
             app:startIconDrawable="@drawable/ic_search">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiSearchLine"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:layout_height="56dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp"/>
+                tools:text="ffff" />
         </com.google.android.material.textfield.TextInputLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_notes_list"
+        android:id="@+id/searchNotesList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="8dp"
+        android:paddingHorizontal="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
