--- a/mozer/hw7/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw7/app/src/main/res/layout/card_view.xml
@@ -66,23 +66,30 @@
             android:layout_margin="16dp"
             android:ellipsize="end"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/picture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider"
             app:layout_goneMarginBottom="16dp"
             tools:text="Some very long text that probably won't fit on a single line." />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/picture"
-            android:layout_width="0dp"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
             android:layout_height="380dp"
             android:layout_marginTop="16dp"
-            android:scaleType="centerCrop"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardText"
-            tools:src="@color/black" />
+            tools:background="@color/icon_color" />
+
+        <me.relex.circleindicator.CircleIndicator3
+            android:id="@+id/circleIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            app:layout_constraintTop_toBottomOf="@id/viewPager"
+            app:layout_constraintEnd_toEndOf="@id/viewPager"
+            app:layout_constraintStart_toStartOf="@id/viewPager" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLike"
@@ -93,7 +100,7 @@
             app:icon="@drawable/ic_favorite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/picture"
+            app:layout_constraintTop_toBottomOf="@id/viewPager"
             tools:text="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
