--- a/tarasov/lesson11/app/src/main/res/layout/fragment_images.xml
+++ b/tarasov/lesson11/app/src/main/res/layout/fragment_images.xml
@@ -18,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_nav_icon"
-            app:navigationIconTint="@color/md_theme_dark_primary"
-            app:title="Images"
+            app:title="@string/images"
             app:titleCentered="true">
 
         </com.google.android.material.appbar.MaterialToolbar>
