--- a/tarasov/lesson11/app/src/main/res/layout/fragment_profile.xml
+++ b/tarasov/lesson11/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title="Profile"
+            app:title="@string/profile"
             app:titleCentered="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
