--- a/mozer/hw7/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw7/app/src/main/res/layout/card_view.xml
@@ -31,8 +31,8 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
             android:textSize="16sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,12 +44,13 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:text="@string/subtitle"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profileImage"
             app:layout_constraintTop_toBottomOf="@id/profileName" />
 
-        <View
+        <com.google.android.material.divider.MaterialDivider
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -87,9 +88,9 @@
             android:id="@+id/circleIndicator"
             android:layout_width="match_parent"
             android:layout_height="24dp"
-            app:layout_constraintTop_toBottomOf="@id/viewPager"
             app:layout_constraintEnd_toEndOf="@id/viewPager"
-            app:layout_constraintStart_toStartOf="@id/viewPager" />
+            app:layout_constraintStart_toStartOf="@id/viewPager"
+            app:layout_constraintTop_toBottomOf="@id/viewPager" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLike"
