--- a/mozer/hw7/app/src/main/res/layout/fragment_auth.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_auth.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingHorizontal="24dp">
 
     <com.google.android.material.textview.MaterialTextView
@@ -12,11 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/title_auth"
-        android:layout_marginTop="220dp"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="28sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/login"
@@ -27,19 +25,16 @@
         android:hint="@string/username"
         android:textColorHint="?attr/colorPrimary"
         android:textSize="16sp"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tiLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            tools:text="Input"
+            android:imeOptions="actionDone"
             android:inputType="text|textNoSuggestions"
-            android:imeOptions="actionDone"/>
+            android:maxLines="1"
+            tools:text="Input" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -51,18 +46,15 @@
         android:hint="@string/password"
         android:textColorHint="?attr/colorPrimary"
         android:textSize="16sp"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login">
+        app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tiPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:inputType="textPassword"
             android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:maxLines="1"
             tools:text="Input" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,9 +62,6 @@
         android:id="@+id/btnContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:text="@string/btn_continue"
-        app:layout_constraintTop_toBottomOf="@+id/password"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="@string/btn_continue" />
+</androidx.appcompat.widget.LinearLayoutCompat>
