--- a/mozer/hw7/app/src/main/res/layout/fragment_create_post.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_create_post.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             app:menu="@menu/create_post_menu"
             app:navigationIcon="@drawable/ic_arrow_back"
-            app:title="New post..."
+            app:title="@string/title_create_post"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -43,14 +43,14 @@
                 tools:text="Multiline text here..." />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
+        <com.google.android.material.chip.Chip
             android:id="@+id/btnAddImage"
-            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="@string/add_image"
-            app:icon="@drawable/ic_add_photo_alternate"
+            app:chipIcon="@drawable/ic_add_photo_alternate"
+            app:chipIconTint="?attr/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tiPostText" />
 
