--- a/mozer/hw7/app/src/main/res/layout/fragment_images.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_images.xml
@@ -15,7 +15,7 @@
             android:elevation="0dp"
             app:navigationIcon="@drawable/ic_arrow_back"
             app:navigationIconTint="?attr/colorOnSurface"
-            app:title="Images"
+            app:title="@string/title_images"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
 
