--- a/mozer/hw7/app/src/main/res/layout/fragment_post.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_post.xml
@@ -16,7 +16,7 @@
             android:elevation="0dp"
             app:navigationIcon="@drawable/ic_arrow_back"
             app:navigationIconTint="?attr/colorOnSurface"
-            app:title="Post"
+            app:title="@string/title_post"
             app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -48,8 +48,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="@string/cardTitle"
+                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                 android:textSize="16sp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profileImage"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -61,12 +61,13 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:text="@string/subtitle"
+                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/profileImage"
                 app:layout_constraintTop_toBottomOf="@id/profileName" />
 
-            <View
+            <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -105,9 +106,9 @@
                 android:id="@+id/circleIndicator"
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
-                app:layout_constraintTop_toBottomOf="@id/viewPager"
                 app:layout_constraintEnd_toEndOf="@id/viewPager"
-                app:layout_constraintStart_toStartOf="@id/viewPager" />
+                app:layout_constraintStart_toStartOf="@id/viewPager"
+                app:layout_constraintTop_toBottomOf="@id/viewPager" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
