--- a/mozer/hw7/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw7/app/src/main/res/layout/card_view.xml
@@ -32,7 +32,6 @@
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
             android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,6 @@
             android:layout_marginHorizontal="16dp"
             android:text="@string/subtitle"
             android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profileImage"
             app:layout_constraintTop_toBottomOf="@id/profileName" />
@@ -66,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:ellipsize="end"
-            android:textSize="16sp"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider"
