--- a/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,6 @@
                             android:layout_marginTop="14dp"
                             android:text="@string/cardTitle"
                             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-                            android:textSize="22sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/profileImage"
                             app:layout_constraintTop_toTopOf="parent"
@@ -71,7 +70,6 @@
                             android:layout_marginTop="4dp"
                             android:text="@string/subtitle"
                             android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-                            android:textSize="12sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/profileImage"
                             app:layout_constraintTop_toBottomOf="@id/profileName" />
@@ -91,7 +89,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="14dp"
-                            android:textSize="28sp"
+                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                             app:layout_constraintEnd_toEndOf="@id/images"
                             app:layout_constraintStart_toStartOf="@id/images"
                             app:layout_constraintTop_toBottomOf="@id/dividerTop"
@@ -103,8 +101,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="44dp"
                             android:text="@string/profile_images"
-                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                            android:textSize="12sp"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                             app:layout_constraintEnd_toStartOf="@+id/subscribers"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -116,7 +113,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="14dp"
-                            android:textSize="28sp"
+                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                             app:layout_constraintEnd_toEndOf="@id/subscribers"
                             app:layout_constraintStart_toStartOf="@id/subscribers"
                             app:layout_constraintTop_toTopOf="@id/dividerTop"
@@ -128,8 +125,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="74dp"
                             android:text="@string/profile_subscribers"
-                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                            android:textSize="12sp"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                             app:layout_constraintEnd_toStartOf="@+id/posts"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -141,7 +137,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="14dp"
-                            android:textSize="28sp"
+                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                             app:layout_constraintEnd_toEndOf="@id/posts"
                             app:layout_constraintStart_toStartOf="@id/posts"
                             app:layout_constraintTop_toBottomOf="@+id/dividerTop"
@@ -154,8 +150,7 @@
                             android:layout_marginStart="70dp"
                             android:layout_marginEnd="44dp"
                             android:text="@string/profile_posts"
-                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                            android:textSize="12sp"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -208,8 +203,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="18dp"
                             android:text="@string/profile_images_title"
-                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                            android:textSize="14sp"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
