--- a/mozer/hw7/app/src/main/res/layout/fragment_create_post.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_create_post.xml
@@ -39,12 +39,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                android:textSize="16sp"
                 tools:text="Multiline text here..." />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.chip.Chip
             android:id="@+id/btnAddImage"
+            style="@style/Widget.Material3.Chip.Assist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
