tarasov/hw10 changes

--- a/tarasov/lesson10/app/src/main/res/layout/fragment_note.xml
+++ b/tarasov/lesson10/app/src/main/res/layout/fragment_note.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="QuickNote"
-            app:titleCentered="true">
+            app:titleCentered="true"
+            app:navigationIcon="@drawable/ic_nav_icon">
 
         </com.google.android.material.appbar.MaterialToolbar>
 
