--- a/tarasov/lesson10/app/src/main/res/layout/item_note.xml
+++ b/tarasov/lesson10/app/src/main/res/layout/item_note.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         app:cardBackgroundColor="@color/md_theme_dark_error">
 
@@ -29,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp">
 
         <com.google.android.material.textview.MaterialTextView
